Анимировал фоновый рисунок

--- a/static/less/app.less
+++ b/static/less/app.less
@@ -1,4 +1,8 @@
-.cont123 {
-    margin-top: 20px;
-    color: red;
-}
+@import './fonts.less';
+@import './main.less';
+@import './media.less';
+@import './mixin.less';
+
+@import './color.less';
+@import './components/intro.less';
+@import './components/fragments/cursor-funny.less';
