--- a/static/less/fonts.less
+++ b/static/less/fonts.less
@@ -39,12 +39,12 @@
 	font-weight: normal;
 }
 
-@font-face {
-	font-family: "Glyphicons Halflings";
-	src: url("../fonts/glyphicons-halflings-regular/glyphicons-halflings-regular.eot");
-	src: url("../fonts/glyphicons-halflings-regular/glyphicons-halflings-regular.eot?#iefix")format("embedded-opentype"),
-	url("../fonts/glyphicons-halflings-regular/glyphicons-halflings-regular.woff") format("woff"),
-	url("../fonts/glyphicons-halflings-regular/glyphicons-halflings-regular.ttf") format("truetype");
-	font-style: normal;
-	font-weight: normal;
-}
+// @font-face {
+// 	font-family: "Glyphicons Halflings";
+// 	src: url("../fonts/glyphicons-halflings-regular/glyphicons-halflings-regular.eot");
+// 	src: url("../fonts/glyphicons-halflings-regular/glyphicons-halflings-regular.eot?#iefix")format("embedded-opentype"),
+// 	url("../fonts/glyphicons-halflings-regular/glyphicons-halflings-regular.woff") format("woff"),
+// 	url("../fonts/glyphicons-halflings-regular/glyphicons-halflings-regular.ttf") format("truetype");
+// 	font-style: normal;
+// 	font-weight: normal;
+// }
