--- a/static/less/main.less
+++ b/static/less/main.less
@@ -15,15 +15,7 @@
 	opacity: 1;
 }
 
-body input:focus:required:invalid,
-body textarea:focus:required:invalid {
-	
-}
-body input:required:valid,
-body textarea:required:valid {
-	
-}
-
 body {
-	background-color: #a75d43;
+	font-family: 'RobotoLight, Arial';
+	margin: 0;
 }
